30/12/2011 

Fixed issue #49. Bootstrapped Mataclass had incorrect superclass set.
Added primitive 220 to lookup if a receiver canUnderstand a selector.

29/12/2011

Fixed issue #50 ==. All ObjectTests pass. One test was a false positive and has been fixed.
Ensured MetaClass was registered to ensure we dont get two in memory.
Added naming of Class' metaclass to make debug/stack trace output easier to read.

28/12/2011

Added primitive p218 which gets the internal fullyqualified name of the receiver,
or 'unnamed' if the receiver is not a class.

27/12/2011

Fixed issue #65 with block referring to outer self and getting block, not outer self.

25/12/2011

Added support for subclass:instanceVariableNames:classVariableNames:poolDictionaries:
*Note, need support for classInstanceVariableNames.
Fixed string with nested ''

24/12/2011

Fixed issue with nested arrays ('foo' ('bar') 'baz').
Fixed issue relating to basicSize. There is an associated issue with iterating through arrays.
I have not tested if this fix also fixes that issue.
Added size for non-indexed objects.

23/12/2011

Modified Maven pom to have a "no-tests" profile for convenience that
skips the JUnit-based tests and the Smalltalk-based tests.

21/12/2011

Finished Objects and Protocols Document.

20/12/2011

Added notNil to UndefinedObject as resolution of raised issue.
Fixed typo in Object.st at:put: - value should have been anObject
Fixed Object hash. Issue 52.

19/12/2011

Changes to array handling as part of issue logged against isKindOf: 

18/12/2011

Added to list of classes and protocols.

17/12/2011

Modified stout launcher to follow same process as stic launcher.
Added List of Classes to be adopted and implemented.
Started List of protocol for each of these classes that needs to
be implemented.
Fixing variable resolution within nested blocks to walk up the chain
of outer receivers looking for the variable.
Implementing the base initialization of the Character class.